--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet"></head>
   <link href="https://fonts.googleapis.com/css?family=Euphoria+Script" rel="stylesheet">
-<body>
-  <app-root></app-root>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">  <app-root></app-root>
 </body>
 </html>
