--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,224 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <style>
+    html{
+      width: 100%;
+    	height: 100%;
+    	background-color: rgba(8,8,8,1.0);
+    }
+
+    body{
+      margin:0;
+
+    }
+
+    #root{
+      opacity:0;
+      transition: opacity 3s;
+      -webkit-transition: opacity 3s; /* Safari */
+    }
+
+    #progress-flex-container{
+
+    }
+
+    #progress{
+    	height: 100vh;
+    	width: 50%;
+    	display: block;
+
+      margin: auto;
+      position: absolute;
+      top: 0; left: 0; bottom: 0; right: 0;
+
+      opacity:1;
+      transition: opacity 5s;
+      -webkit-transition: opacity 5s; /* Safari */
+
+      /*-webkit-margin-after: 0.2em;
+      -webkit-margin-start: 16.5em;*/
+
+      -ms-flex-align: center;
+      align-items: center;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -ms-flex-pack: center;
+      justify-content: center;
+      height: 100%;
+      width: 100%;
+      opacity: 1;
+      -ms-transform: translate3D(0,0,0);
+      transform: translate3D(0,0,0);
+      -moz-transform: translate3D(0,0,0);
+      -webkit-transform: translate3D(0,0,0);
+      -moz-transition: all 1s ease;
+      -webkit-transition: all 1s ease;
+
+      list-style-type: none;
+      -webkit-margin-before: -5px;
+      -webkit-margin-start: 10px;
+      -webkit-margin-end: 0px;
+      -webkit-padding-start: 0px;
+    }
+
+    #progress li{
+    	position: absolute;
+    	left: 50%;
+    	top: 50%;
+    	display: block;
+    	background: transparent;
+    	border: 10px solid white;
+    	border-left-color: transparent;
+    	border-right-color: transparent;
+    	border-radius: 500px;
+    	transition: all 0.5s ease;
+    }
+
+    /*#progress li:last-child {
+    	position: absolute;
+    	left: 50%;
+    	top: 50%;
+    	z-index: 20;
+    	width: 200px;
+    	height: 100px;
+    	margin-left: -110px;
+    	margin-top: -110px;
+    	padding: 70px 0px 30px;
+    	background-color: rgba(8,8,8,1.0);
+    	border: 10px solid rgba(8,8,8,1.0);
+    	border-radius: 200px;
+    	text-shadow: 2px 2px 0px rgba(0,0,0,1);
+    	box-shadow: 0px 0px 30px rgba(23,246,251, 0.5);
+    	animation: pulseShadow 5s infinite linear;
+    }*/
+
+    #progress li:last-child:after{
+    	content:'';
+    	border: 3px dotted rgba(22,42,43,1.0);
+    	border-radius: 200px;
+    	width: 200px;
+    	height: 200px;
+    	display: block;
+    	position: absolute;
+    	top:-3px;
+    	left:-3px;
+    	background-color: transparent;
+    	box-shadow: inset 0px 0px 30px rgba(0,0,0,1.0);
+    }
+
+    #progress li:first-child{
+    	margin-left: -130px;
+    	margin-top: -130px;
+    	z-index: 2;
+    	width: 240px;
+    	height: 240px;
+    	border-width: 10px;
+    	animation: spinBG 5s infinite linear;
+    }
+
+    #progress li:nth-child(2){
+    	margin-left: -137px;
+    	margin-top: -137px;
+    	z-index: 1;
+    	width: 270px;
+    	height: 270px;
+    	border-width: 2px;
+    	border-style: dotted;
+    	box-shadow: 0px 0px 20px rgba(23,246,251, .5);
+    	animation: spinBG2 2s infinite linear;
+    }
+
+    #progress li:nth-child(3){
+    	margin-left: -150px;
+    	margin-top: -150px;
+    	z-index: 1;
+    	width: 296px;
+    	height: 296px;
+    	border-width: 2px;
+    	box-shadow: inset 0px 0px 25px rgba(23,246,251, .25);
+    	animation: spinBG 12s infinite linear;
+    }
+
+    #progress li:nth-child(4){
+    	margin-left: -170px;
+    	margin-top: -170px;
+    	z-index: 1;
+    	width: 330px;
+    	height: 330px;
+    	border-width: 5px;
+    	border-style: solid;
+    	box-shadow: inset 0px 0px 25px rgba(255,255,255,1);
+    	animation: spinBG3 8s infinite linear;
+    }
+
+
+    /*-------------------------------------------
+     Animations
+    -------------------------------------------*/
+    @keyframes pulseGlow{
+    	0%  {text-shadow: 0px 0px 20px rgba(23,246,251, 0.75);}
+    	50% {text-shadow: 0px 0px 40px rgba(23,246,251, 0.5); }
+    	100%{text-shadow: 0px 0px 20px rgba(23,246,251, 0.75);}
+    }
+
+    @keyframes pulseShadow{
+    	0%  {box-shadow: 0px 0px 30px rgba(23,246,251, 0.25);}
+    	50% {box-shadow: 0px 0px 30px rgba(23,246,251, 0.75);}
+    	100%{box-shadow: 0px 0px 30px rgba(23,246,251, 0.25);}
+    }
+
+    @keyframes spinBG{
+    	0%  {transform: rotate(0deg);}
+    	100%{transform: rotate(360deg);}
+    }
+
+    @keyframes spinBG2{
+    	0%{
+    		transform: rotate(360deg);
+    		box-shadow: 0px 0px 1px rgba(23,246,251, 0.5);
+    	}
+    	50%{
+    		transform: rotate(180deg);
+    		box-shadow: 0px 0px 20px rgba(23,246,251, 0.5);
+    	}
+    	100%{
+    		transform: rotate(0deg);
+    		box-shadow: 0px 0px 1px rgba(23,246,251, 0.5);
+    	}
+    }
+
+    @keyframes spinBG3{
+    	0%{
+    		transform: rotate(180deg);
+    		box-shadow: 0px 0px 1px rgba(23,246,251, 0.1);
+    	}
+    	50%{
+    		transform: rotate(0deg);
+    	}
+    	100%{
+    		transform: rotate(-180deg);
+    	}
+    }
+
+
+    </style>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+
+    <ul id="progress">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -37,4 +250,13 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <script>
+  document.addEventListener("DOMContentLoaded", function(event) {
+      document.getElementById('root').style.opacity='1';
+      document.getElementById('progress').style.opacity='0';
+  });
+
+  </script>
+
 </html>
