--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,13 @@
     <title>React App</title>
 
     <style>
+
+    *, *::before, *::after {
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+    }
+
     html{
       width: 100%;
     	height: 100%;
@@ -35,8 +42,8 @@
 
     #root{
       opacity:0;
-      transition: opacity 3s;
-      -webkit-transition: opacity 3s; /* Safari */
+      transition: opacity 2s;
+      -webkit-transition: opacity 2s; /* Safari */
     }
 
     #progress-flex-container{
@@ -52,9 +59,6 @@
       position: absolute;
       top: 0; left: 0; bottom: 0; right: 0;
 
-      opacity:1;
-      transition: opacity 5s;
-      -webkit-transition: opacity 5s; /* Safari */
 
       /*-webkit-margin-after: 0.2em;
       -webkit-margin-start: 16.5em;*/
@@ -82,6 +86,10 @@
       -webkit-margin-start: 10px;
       -webkit-margin-end: 0px;
       -webkit-padding-start: 0px;
+
+      transition: opacity 5s;
+      -webkit-transition: opacity 5s; /* Safari */
+
     }
 
     #progress li{
@@ -239,24 +247,15 @@
     </ul>
 
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 
   <script>
-  document.addEventListener("DOMContentLoaded", function(event) {
-      document.getElementById('root').style.opacity='1';
-      document.getElementById('progress').style.opacity='0';
-  });
-
+    document.addEventListener("DOMContentLoaded", function(event) {
+        document.getElementById('root').style.opacity = '1';
+        debugger;
+        document.getElementById('progress').style.opacity = '0';
+    });
   </script>
 
 </html>
