--- a/public/index.html
+++ b/public/index.html
@@ -82,13 +82,16 @@
       -webkit-transition: all 1s ease;
 
       list-style-type: none;
-      -webkit-margin-before: -5px;
-      -webkit-margin-start: 10px;
+      -webkit-margin-before: 0;
+      -webkit-margin-start: 0;
       -webkit-margin-end: 0px;
       -webkit-padding-start: 0px;
 
       transition: opacity 5s;
       -webkit-transition: opacity 5s; /* Safari */
+
+      margin-left: 0;
+      padding-left: 0;
 
     }
 
@@ -105,41 +108,9 @@
     	transition: all 0.5s ease;
     }
 
-    /*#progress li:last-child {
-    	position: absolute;
-    	left: 50%;
-    	top: 50%;
-    	z-index: 20;
-    	width: 200px;
-    	height: 100px;
-    	margin-left: -110px;
-    	margin-top: -110px;
-    	padding: 70px 0px 30px;
-    	background-color: rgba(8,8,8,1.0);
-    	border: 10px solid rgba(8,8,8,1.0);
-    	border-radius: 200px;
-    	text-shadow: 2px 2px 0px rgba(0,0,0,1);
-    	box-shadow: 0px 0px 30px rgba(23,246,251, 0.5);
-    	animation: pulseShadow 5s infinite linear;
-    }*/
-
-    #progress li:last-child:after{
-    	content:'';
-    	border: 3px dotted rgba(22,42,43,1.0);
-    	border-radius: 200px;
-    	width: 200px;
-    	height: 200px;
-    	display: block;
-    	position: absolute;
-    	top:-3px;
-    	left:-3px;
-    	background-color: transparent;
-    	box-shadow: inset 0px 0px 30px rgba(0,0,0,1.0);
-    }
-
     #progress li:first-child{
-    	margin-left: -130px;
-    	margin-top: -130px;
+      margin-left: -120px;
+      margin-top: -120px;
     	z-index: 2;
     	width: 240px;
     	height: 240px;
@@ -148,8 +119,8 @@
     }
 
     #progress li:nth-child(2){
-    	margin-left: -137px;
-    	margin-top: -137px;
+      margin-left: -135px;
+          margin-top: -135px;
     	z-index: 1;
     	width: 270px;
     	height: 270px;
@@ -160,8 +131,8 @@
     }
 
     #progress li:nth-child(3){
-    	margin-left: -150px;
-    	margin-top: -150px;
+      margin-left: -148px;
+    margin-top: -148px;
     	z-index: 1;
     	width: 296px;
     	height: 296px;
@@ -171,8 +142,8 @@
     }
 
     #progress li:nth-child(4){
-    	margin-left: -170px;
-    	margin-top: -170px;
+      margin-left: -168px;
+        margin-top: -168px;
     	z-index: 1;
     	width: 330px;
     	height: 330px;
