--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,7 @@
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
         document.getElementById('root').style.opacity = '1';
-        debugger;
+        // debugger;
         document.getElementById('progress').style.opacity = '0';
     });
   </script>
